--- a/index.html
+++ b/index.html
@@ -1,46 +1,52 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Welcome to TimeStamp</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel=stylesheet href="css/bootstrap.min.css">
-        <link rel="author" href="humans.txt">
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" type="text/css"> 
+        <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>        
+        <script src="js/scripts.js" type="text/javascript"></script>        
     </head>
     <body>
-        <div class="container">
-         
-         <div class="hero-unit">
-         <h1>Awesome responsive layout</h1>
-         <p>Hello guys i am a ".hero-unit" and you can use me if you wanna say something important.</p>
-         <p><a class="btn btn-primary btn-large">Super important &raquo;</a></p>
-         </div><!-- .hero-unit -->
-        
- <div class="row">
-         <div class="span4">
-         <h2>Box Number 1</h2>
-         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-         <p><a class="btn" href="#">Click meeee &raquo;</a></p>
-         </div><!-- .span4 -->
-   
-         <div class="span4">
-                 <h2>Box Number 2</h2>
-         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-         <p><a class="btn" href="#">Click meeee &raquo;</a></p>
-         </div><!-- .span4 -->
-   
-         <div class="span4">
-                 <h2>Box Number 3</h2>
-         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-         <p><a class="btn" href="#">Click meeee &raquo;</a></p>
-         </div><!-- .span4 -->
-   
- </div><!-- .row -->
- </div><!-- .container -->
-
-        <script src="js/main.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <div id="top">
+            <div id="header">
+                <div id="signup">
+                    <!-- <p>Sign up for our beta test!</p> -->
+                    <form action="http://timestamptracking.us5.list-manage.com/subscribe/post?u=c49072d929d4805476dea7a70&amp;id=c87bfeb21e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <input type="email" placeholder="Sign up for updates..." name="EMAIL" class="required email" id="mce-EMAIL">
+                        <!-- <input type="submit" value="" name="subscribe" id="mc-embedded-subscribe" class="button"> -->
+                    </form>
+                </div>
+            </div>            
+        </div>
+        <div id="main">
+            <div id="sidebar">
+                <img src="assets/logo.jpg" />
+                <h3>About</h3>
+                <p>TimeStamp creates an objective, meaningful, and enduring record of exactly where you spend your time. TimeStamp's life-capturing dataset will help you identify wasted time and methodically squeeze it out of your day.</p>
+                <h3>Contact</h3>
+                <p>Have questions or comments? Let us know at <a href="">hello@timestamp.com</a>.</p>
+            </div>
+            <div id="blog">
+                <h2>The TimeStamp Blog</h2>
+                <div>
+                    <h3>Blog post title</h3>
+                    <h4>Posted January 9th at 5:40am</h4>
+                    <p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.</p>
+                </div>
+                <div>
+                    <h3>Blog post title</h3>
+                    <h4>Posted January 9th at 5:40am</h4>
+                    <p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
+                </div>                
+            </div>
+        </div>
+        <div id="footer">
+            <a href="" id="scroll">Back to top</a>
+            <div id="social">
+                <a href="https://www.facebook.com/pages/Timestamp-Tracking/172701026211136?ref=ts&fref=ts" target="_blank" class="fb"><img src="assets/facebook.png" /> Like us on Facebook</a>
+                <a href="https://twitter.com/_TimeStamp" target="_blank" class="twitter"><img src="assets/twitter.png" /> Follow us on Twitter</a>
+            </div>
+        </div>        
     </body>
 </html>
